k8s/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
spec:
  selector:
    app: phpmyadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30002  # Exposer phpMyAdmin sur ce port externe
  type: NodePort
