k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-app-service
spec:
  selector:
    app: laravel-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001  # Exposer le service sur ce port externe
  type: NodePort
