k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: laravel-app-network-policy
spec:
  podSelector:
    matchLabels:
      app: laravel-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: mysql
      ports:
        - protocol: TCP
          port: 80
